--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -190,7 +190,10 @@ add_timemory_google_test(data_tracker_tests
 
 add_timemory_google_test(cache_tests
     SOURCES         cache_tests.cpp
-    LINK_LIBRARIES  common-test-libs)
+    LINK_LIBRARIES  common-test-libs
+                    timemory::timemory-core
+                    timemory::timemory-timing-component
+                    timemory::timemory-rusage-component)
 
 add_timemory_google_test(archive_storage_tests
     SOURCES         archive_storage_tests.cpp
@@ -418,7 +421,6 @@ if(TIMEMORY_USE_GOTCHA)
                         gotcha-tests-lib
                         timemory::timemory-gotcha
                         timemory::timemory-dmp
-                        timemory::timemory-papi
                         timemory::timemory-vector
                         timemory::timemory-arch
                         timemory::timemory-plotting
