--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,29 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
+
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+  docker: circleci/docker@1.4.0
+
+jobs:
+  build:
+    docker:
+      - image: jrmadsen/timemory:dev-cpu
+    steps:
+      - checkout
+      - run:
+          name: conda-installation
+          command: >
+            wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh &&
+            bash ${HOME}/miniconda.sh -b -p ${HOME}/miniconda &&
+            export PATH="${HOME}/miniconda/bin:${PATH}" &&
+            conda config --set always_yes yes --set changeps1 no &&
+            conda create -c defaults -c conda-forge -n pyctest python=3.7.8 pyctest &&
+            source activate pyctest
+      - run:
+          name: build
+          command: python ./pyctest-runner.py --coverage --pyctest-build-type=Debug --build-libs shared --mpi --papi --caliper --mpip --python --gotcha --stats --cxx-standard=17 -- -V --output-on-failure -- -DTIMEMORY_BUILD_CALIPER=OFF -DTIMEMORY_BUILD_GOTCHA=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+      - run:
+          name: install
+          command: >
+            cd build-timemory/Linux &&
+            make install -j &&
+            cmake -P tests/test-python-install-import.cmake
