--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: apt-fixes
           command: >
-            apt-get update
+            apt-get update &&
             apt-get install -y git ssh
       - checkout
       - run:
