--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
             source activate &&
             conda activate pyctest &&
             python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j1
-            --build-libs shared --coverage --mpi --papi --caliper --mpip --python --gotcha --stats --cxx-standard=17
+            --build-libs shared --coverage --mpi --papi --caliper --gotcha --stats --cxx-standard=17
             -- -V --output-on-failure
             -- -DTIMEMORY_BUILD_CALIPER=OFF -DTIMEMORY_BUILD_GOTCHA=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
