Added timemory_argparse routines
- Configuring settings via command-line are now extensively available in C++ and Python
- minor migration of utility::stream to data::stream
- python get_text routine
- additional virtual functions in vsettings
- fixes/improvements to argparse
- fixes to backtrace from signal-handler

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -153,6 +153,13 @@ add_timemory_google_test(socket_tests
                     timemory::timemory-core
                     test-werror-flags)
 
+add_timemory_google_test(settings_tests
+    DISCOVER_TESTS
+    SOURCES         settings_tests.cpp
+    LINK_LIBRARIES  common-test-libs
+                    timemory::timemory-core
+                    timemory::timemory-config)
+
 add_timemory_google_test(argparse_tests
     SOURCES         argparse_tests.cpp
     LINK_LIBRARIES  common-test-libs
