--- a/examples/ex-ert/CMakeLists.txt
+++ b/examples/ex-ert/CMakeLists.txt
@@ -13,6 +13,9 @@ if("${CMAKE_PROJECT_NAME}" STREQUAL "timemory")
     if(DEFINED BUILD_ERT AND NOT BUILD_ERT)
         return()
     endif()
+    if(NOT TIMEMORY_BUILD_ERT)
+        return()
+    endif()
     if("$ENV{CI}" STREQUAL "true" AND TIMEMORY_BUILD_LTO)
         return()
     endif()
