CMake + python + lw user_bundle
- fix to installation library path
- fix to FindPAPI being copied into install
- added TIMEMORY_{SAMPLE,GET,AUDIT}
- scope types in python
- set_started, set_stopped, is_running operations
- more granular opaque functions
- user_bundle now supports usage within lightweight_tuple
- support for displaying pushed/popped components without any laps
- storage true_size
- improvements to python impl of profiler and tracer

--- a/source/timemory/backends/CMakeLists.txt
+++ b/source/timemory/backends/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-if(TIMEMORY_USE_MPI)
+if(TIMEMORY_USE_MPI_INIT)
 
     file(GLOB_RECURSE mpi_header_files ${CMAKE_CURRENT_SOURCE_DIR}/types/mpi/*.hpp)
     file(GLOB_RECURSE mpi_source_files ${CMAKE_CURRENT_SOURCE_DIR}/types/mpi/*.cpp)
@@ -11,7 +11,7 @@ if(TIMEMORY_USE_MPI)
         FOLDER              components
         HEADERS             ${mpi_header_files}
         SOURCES             ${mpi_source_files}
-        DEPENDS             timemory-mpi timemory-mpi-init timemory-core
-        PROPERTY_DEPENDS    GLOBAL COMPONENT USER_BUNDLE)
+        DEPENDS             timemory-mpi timemory-core
+        PROPERTY_DEPENDS    GLOBAL)
 
 endif()
