--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,22 @@
 language: python
 
 # The apt packages here install our compiled code dependencies.
-matrix:
+jobs:
   include:
     # ------------------------------------------------------------------------ #
     #
-    #   Python 3.6
+    #   Python3.7 / macOS
+    #
+    # ------------------------------------------------------------------------ #
+    - os: osx
+      osx_image: xcode12.2
+      python: "3.7"
+      env:
+        - MATRIX_EVAL="CC=$(which clang) && CONDA_OS=MacOSX && && CXX=$(which clang++) && BUILD_ARGS='--build-libs shared --caliper --python --stats --tools --cxx-standard=14'"
+
+    # ------------------------------------------------------------------------ #
+    #
+    #   Python 3.6 / Linux
     #
     # ------------------------------------------------------------------------ #
     # GCC 6
@@ -118,7 +129,7 @@ matrix:
         - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --ompt --stats --tools --cxx-standard=14'"
     # ------------------------------------------------------------------------ #
     #
-    #   Python 3.7
+    #   Python 3.7 / Linux
     #
     # ------------------------------------------------------------------------ #
     # GCC 6
@@ -230,7 +241,8 @@ before_install:
   - eval "${MATRIX_EVAL}"
   - export CC=${CC}
   - export CXX=${CXX}
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - if [ -z "${CONDA_OS}" ]; then CONDA_OS=Linux; fi
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-${CONDA_OS}-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p ${HOME}/miniconda
   - export PATH="${HOME}/miniconda/bin:${PATH}"
   - conda config --set always_yes yes --set changeps1 no
@@ -251,7 +263,12 @@ script:
   - travis_wait 85 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
   - cd build-timemory/Linux
   - make install -j
-  - if [ -f "tests/test-python-install-import.cmake" ]; then cmake -P tests/test-python-install-import.cmake; fi
+  - if [ -f "tests/test-python-install-import.cmake" ]; then
+    cmake -P tests/test-python-install-import.cmake;
+    cd;
+    export PYTHON_PATH=${HOME}/timemory-install/lib/python${TRAVIS_PYTHON_VERSION}/site-packages:${PYTHONPATH};
+    python${TRAVIS_PYTHON_VERSION} -c "import timemory";
+    fi
 
 after_success:
   - echo "Testing is Done"
