--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -56,7 +56,7 @@ this_path = os.path.abspath(os.path.dirname(__file__))
 
 os.environ.setdefault("TIMEMORY_BANNER", "OFF")
 os.environ.setdefault("PROFILESELECTED", "1")
-'''
+"""
 Setting PROFILESELECTED=1 attempts to ensure that when gperftools is linked,
 cpu profiler, heap checker, and heap profiler lie dormant until activated.
 
@@ -88,15 +88,14 @@ w.r.t. corrupted sizes, set:
     export DYLD_FORCE_FLAT_NAMESPACE=1
 
 before BEFORE running Python
-'''
+"""
 
 
 def __load_component_libs():
-    '''Loads the component libraries'''
-    import ctypes
+    """Loads the component libraries"""
     import glob
 
-    relative_lib_path = '@LIB_RELPATH@'
+    relative_lib_path = "@LIB_RELPATH@"
 
     def __valid_relpath(p):
         global this_path
@@ -108,23 +107,26 @@ def __load_component_libs():
         if valid:
             break
         else:
-            relative_lib_path = os.path.join('..', relative_lib_path)
+            relative_lib_path = os.path.join("..", relative_lib_path)
 
     ext = None
-    if platform.system().lower().startswith('darwin'):
-        ext = 'dylib'
-    elif platform.system().lower().startswith('linux'):
-        ext = 'so'
-    elif platform.system().lower().startswith('win'):
-        ext = 'dll'
+    if platform.system().lower().startswith("darwin"):
+        ext = "dylib"
+    elif platform.system().lower().startswith("linux"):
+        ext = "so"
+    elif platform.system().lower().startswith("win"):
+        ext = "dll"
 
     def __load(name):
-        p = os.path.realpath(os.path.join(this_path, name))
-        ctypes.cdll.LoadLibrary(p)
+        p = os.path.realpath(os.path.join(this_path, relative_lib_path, name))
+        if not os.path.exists(p):
+            p = os.path.realpath(
+                os.path.join(this_path, relative_lib_path, "timemory", name)
+            )
 
-    libs = glob.glob('{}/libtimemory*.*'.format(this_path))
-    libs = list(set(libs))
-    # print(f"Libraries: {libs}")
+    libs = glob.glob(
+        "{}/libtimemory*.*".format(os.path.join(this_path, relative_lib_path))
+    )
     loaded = []
     ntries = 0
     while len(loaded) < len(libs) and ntries < 5 * len(libs):
@@ -134,11 +136,10 @@ def __load_component_libs():
                 continue
             try:
                 __load(os.path.basename(entry))
-                print("Loaded {}".format(os.path.basename(entry)))
                 loaded.append(entry)
-            except Exception as e:
+            except Exception:
                 pass
-    __load('libtimemory.{}'.format(ext))
+    __load("libtimemory.{}".format(ext))
 
 
 if os.environ.get("TIMEMORY_CXX_PLOT_MODE", None) is not None:
@@ -148,31 +149,32 @@ if os.environ.get("TIMEMORY_CXX_PLOT_MODE", None) is not None:
     from . import roofline
     from .common import *
 
-    __all__ = ['version_info',
-               'build_info',
-               'version',
-               # --------------- modules ---------------#
-               'mpi_support',
-               'roofline',
-               'mpi',
-               # --------------- functions -------------#
-               'LINE',
-               'FUNC',
-               'FILE',
-               ]
+    __all__ = [
+        "version_info",
+        "build_info",
+        "version",
+        # --------------- modules ---------------#
+        "mpi_support",
+        "roofline",
+        "mpi",
+        # --------------- functions -------------#
+        "LINE",
+        "FUNC",
+        "FILE",
+    ]
 else:
     try:
         try:
             from . import libpytimemory
         except Exception as e:
-            if not platform.system().lower().startswith('win'):
+            if not platform.system().lower().startswith("win"):
                 try:
                     __load_component_libs()
                     from . import libpytimemory
                 except Exception as e2:
-                    print('Exception: {}'.format(e2))
+                    print("Exception: {}".format(e2))
             else:
-                print('Exception: {}'.format(e))
+                print("Exception: {}".format(e))
 
         from . import plotting
         from . import roofline
@@ -189,64 +191,67 @@ else:
         from .common import *
         from .libpytimemory import *
         from .libpytimemory import settings as settings
+        from .libpytimemory import initialize, finalize
+
         init = initialize
-        __all__ = ['version_info',
-                   'build_info',
-                   'version',
-                   # --------------- modules ---------------#
-                   'libpytimemory',
-                   'hardware_counters',
-                   'mpi_support',
-                   'component',
-                   'settings',
-                   'plotting',
-                   'roofline',
-                   'bundle',
-                   'region',
-                   'trace',
-                   'test',
-                   'util',
-                   'api',
-                   'ert',
-                   'mpi',
-                   # --------------- classes ---------------#
-                   'manager',
-                   'timer',
-                   'rss_usage',
-                   'auto_timer',
-                   'component_list',
-                   'component_bundle',
-                   # ------------ lib submodules -----------#
-                   'units',
-                   'options',
-                   'signals',
-                   # --------------- functions -------------#
-                   'report',
-                   'LINE',
-                   'FUNC',
-                   'FILE',
-                   'toggle',
-                   'enable',
-                   'disable',
-                   'is_enabled',
-                   'enabled',
-                   'enable_signal_detection',
-                   'disable_signal_detection',
-                   'has_mpi_support',
-                   'set_rusage_children',
-                   'set_rusage_self',
-                   'timemory_init',
-                   'timemory_finalize',
-                   'initialize',
-                   'finalize',
-                   'init',
-                   ]
+        __all__ = [
+            "version_info",
+            "build_info",
+            "version",
+            # --------------- modules ---------------#
+            "libpytimemory",
+            "hardware_counters",
+            "mpi_support",
+            "component",
+            "settings",
+            "plotting",
+            "roofline",
+            "bundle",
+            "region",
+            "trace",
+            "test",
+            "util",
+            "api",
+            "ert",
+            "mpi",
+            # --------------- classes ---------------#
+            "manager",
+            "timer",
+            "rss_usage",
+            "auto_timer",
+            "component_list",
+            "component_bundle",
+            # ------------ lib submodules -----------#
+            "units",
+            "options",
+            "signals",
+            # --------------- functions -------------#
+            "report",
+            "LINE",
+            "FUNC",
+            "FILE",
+            "toggle",
+            "enable",
+            "disable",
+            "is_enabled",
+            "enabled",
+            "enable_signal_detection",
+            "disable_signal_detection",
+            "has_mpi_support",
+            "set_rusage_children",
+            "set_rusage_self",
+            "timemory_init",
+            "timemory_finalize",
+            "initialize",
+            "finalize",
+            "init",
+        ]
 
         args = copy.copy(sys.argv)
         try:
-            while len(args) > 0 and len(args[0]) > 0 and args[0][0] == '-':
+            while len(args) > 0 and len(args[0]) > 0 and args[0][0] == "-":
                 args.pop(0)
-        except Exception as e:
+        except Exception:
             args = []
             pass
 
@@ -263,54 +268,64 @@ else:
         settings.command_line = sys.argv
 
     except Exception as e:
+        print("Exception: {}".format(e))
         exc_type, exc_value, exc_traceback = sys.exc_info()
         traceback.print_exception(exc_type, exc_value, exc_traceback)
 
         from . import mpi_support
         from . import mpi
         from . import roofline
-        from .common import *
+        from .common import LINE, FUNC, FILE, line, func, file, frame
 
-        __all__ = ['version_info',
-                   'build_info',
-                   'version',
-                   # --------------- modules ---------------#
-                   'mpi_support',
-                   'roofline',
-                   'mpi',
-                   # --------------- functions -------------#
-                   'LINE',
-                   'FUNC',
-                   'FILE',
-                   ]
+        __all__ = [
+            "version_info",
+            "build_info",
+            "version",
+            # --------------- modules ---------------#
+            "mpi_support",
+            "roofline",
+            "mpi",
+            # --------------- functions -------------#
+            "LINE",
+            "FUNC",
+            "FILE",
+            "line",
+            "func",
+            "file",
+            "frame",
+        ]
 
 sys.modules[__name__].__setattr__(
     "version_info",
-    (@TIMEMORY_VERSION_MAJOR@,
-     @TIMEMORY_VERSION_MINOR@,
-     @TIMEMORY_VERSION_PATCH@))
-sys.modules[__name__].__setattr__(
-    "version",
-    "@TIMEMORY_VERSION@")
+    (
+        int("@TIMEMORY_VERSION_MAJOR@"),
+        int("@TIMEMORY_VERSION_MINOR@"),
+        int("@TIMEMORY_VERSION_PATCH@"),
+    ),
+)
+sys.modules[__name__].__setattr__("version", "@TIMEMORY_VERSION@")
 sys.modules[__name__].__setattr__(
     "build_info",
-    {"date": "@TIMEMORY_INSTALL_DATE@",
-     "library_architecture": "@CMAKE_SYSTEM_PROCESSOR@",
-     "system_name": "@CMAKE_SYSTEM_NAME@",
-     "system_version": "@CMAKE_SYSTEM_VERSION@",
-     "build_type": "@CMAKE_BUILD_TYPE@",
-     "compiler": "@CMAKE_CXX_COMPILER@",
-     "compiler_id": "@CMAKE_CXX_COMPILER_ID@",
-     "compiler_version": "@CMAKE_CXX_COMPILER_VERSION@"})
+    {
+        "date": "@TIMEMORY_INSTALL_DATE@",
+        "library_architecture": "@CMAKE_SYSTEM_PROCESSOR@",
+        "system_name": "@CMAKE_SYSTEM_NAME@",
+        "system_version": "@CMAKE_SYSTEM_VERSION@",
+        "build_type": "@CMAKE_BUILD_TYPE@",
+        "compiler": "@CMAKE_CXX_COMPILER@",
+        "compiler_id": "@CMAKE_CXX_COMPILER_ID@",
+        "compiler_version": "@CMAKE_CXX_COMPILER_VERSION@",
+    },
+)
 
 version_info = sys.modules[__name__].__getattribute__("version_info")
-'''Tuple of version fields'''
+"""Tuple of version fields"""
 
 build_info = sys.modules[__name__].__getattribute__("build_info")
-'''Build information'''
+"""Build information"""
 
 version = sys.modules[__name__].__getattribute__("version")
-'''Version string'''
+"""Version string"""
 
 # this is required for correct pickling
 try:
