--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
       osx_image: xcode12.2
       language: shell
       env:
+        - TRAVIS_PYTHON_VERSION=3.8
         - CONDA_OS=MacOSX
         - CC=$(which clang)
         - CXX=$(which clang++)
