update windows build
* add option TIMEMORY_USE_WINSOCK to avoid forcing clients to include
  winsock.h when they do not want to (including winsock.h in timemory
  gave me a compilation error including timemory in my application
  code)
* fix misspelling NOMINMIX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -249,6 +249,8 @@ if (MSVC)
             string(REGEX REPLACE "/RTC1" "" ${flag_var} "${${flag_var}}")
         endif()
     endforeach()
+
+    option(TIMEMORY_USE_WINSOCK "Include winsock.h with the windows build" OFF)
 else()
     # with gcc, this is usually done be adding -g, but I do not have a linux
     # system to test
