--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,7 @@
-[submodule "source/cereal"]
-	path = external/cereal
-	url = https://github.com/jrmadsen/cereal.git
-[submodule "source/python/pybind11"]
+[submodule "external/pybind11"]
 	path = external/pybind11
 	url = https://github.com/jrmadsen/pybind11.git
-[submodule "source/google-test"]
+[submodule "external/google-test"]
 	path = external/google-test
 	url = https://github.com/google/googletest.git
 [submodule "external/caliper"]
