Updates for windows build (#97)
* add libittnotify to names list for find_library

The library has a different name on windows than on linux!

* make sure deleter is not empty before calling it

Without this check, the debug build on windows crashes at shutdown

* update for windows and for cereal being external

* fix syntax error; add debug to msvc release

* avoid link error with timemory_finalize

* avoid unresolved launch_process

* makedir uses launch_process, and msvc was giving a link error without
  popen.hpp being included

* msvc gave compiler error with tim::launch_process. But the error goes
  away by wrapping the launch_process definition with namespace tim

* move TIMEMORY_BUILD_CEREAL option to Options.cmake

* update windows build

* add option TIMEMORY_USE_WINSOCK to avoid forcing clients to include
  winsock.h when they do not want to (including winsock.h in timemory
  gave me a compilation error including timemory in my application
  code)
* fix misspelling NOMINMIX

* restored get page and peak rss for windows

* address PR review comments

Would like to continue discussion about cereal. I have what I think
is the least disruptive way to do what I need and to avoid cluttering
your timemory build logic. I made a separate issue #98.

* fix error setting debug postfix for timemory-avail

with non-msvc builds where CMAKE_DEBUG_POSTFIX is not set, need to put
${CMAKE_DEBUG_POSTFIX} in double quotes to avoid syntax error

* fix linux error including popen.hpp in utility.hpp

* after running `make format`

Other files changed by make format are:
* source/timemory/components/likwid/types.hpp
* source/timemory/components/user_bundle/types.hpp

but I did not change them so I do not think I should commit them.
(I will if you want me to, but I did not think I should.)

* address PR review comments

All comments should be resolved, except for the ones related to
TIMEMORY_BUILD_CEREAL, still being dis

--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -79,8 +79,13 @@ if(TIMEMORY_USE_COVERAGE)
     target_link_libraries(timemory-core-shared PUBLIC
         timemory-analysis-tools)
 else()
+    set(_FORCE_OBJECT FORCE_OBJECT)
+    if(MSVC OR XCODE)
+        set(_FORCE_OBJECT)
+    endif()
+    
     build_intermediate_library(
-        FORCE_OBJECT
+        ${_FORCE_OBJECT}
         USE_INTERFACE
         INSTALL_SOURCE
         NAME                core
