--- a/source/tools/timemory-avail/CMakeLists.txt
+++ b/source/tools/timemory-avail/CMakeLists.txt
@@ -9,6 +9,12 @@ add_executable(timemory-avail ${_EXCLUDE}
     ${CMAKE_CURRENT_LIST_DIR}/timemory-avail.hpp)
 target_include_directories(timemory-avail PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(timemory-avail PRIVATE timemory-extensions timemory-headers)
+
+if (NOT TIMEMORY_BUILD_CEREAL)
+    # Shouldn't timemory-headers already have a dependency on timemory::timemory-compile-options
+    target_link_libraries(timemory-avail PRIVATE timemory-compile-options)
+endif()
+
 set_target_properties(timemory-avail PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
 install(TARGETS timemory-avail
     DESTINATION bin
