fixes to compiler-instrumentation merge
- implements_storage -> uses_value_storage
- compiler instrumentation
- fixes to argparse tests
- improvements to settings shared_instance/instance

--- a/source/tools/timemory-compiler-instrument/CMakeLists.txt
+++ b/source/tools/timemory-compiler-instrument/CMakeLists.txt
@@ -1,29 +1,26 @@
 
-if(WIN32 OR NOT TIMEMORY_BUILD_TOOLS)
+# windows not yet implemented
+if(WIN32 OR NOT TIMEMORY_BUILD_TOOLS OR NOT TIMEMORY_BUILD_COMPILER_INSTRUMENTATION)
     return()
 endif()
+
+cmake_policy(PUSH)
+cmake_policy(SET CMP0063 OLD)
+
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
+set(CMAKE_C_VISIBILITY_PRESET "hidden")
+set(CMAKE_CXX_VISIBILITY_PRESET "hidden")
 
 foreach(LIB_TYPE shared static)
 
     set(LIB_TARGET timemory-compiler-instrument-${LIB_TYPE})
     string(TOUPPER "${LIB_TYPE}" UC_LIB_TYPE)
 
-    if(TARGET timemory-cxx-${LIB_TYPE})
-        set(_LIBS timemory-cxx-${LIB_TYPE})
-    else()
-        set(_LIBS
-            ${TIMEMORY_${UC_LIB_TYPE}_GLOBAL_LIBRARIES}
-            ${TIMEMORY_${UC_LIB_TYPE}_FACTORY_LIBRARIES}
-            ${TIMEMORY_${UC_LIB_TYPE}_COMPONENT_LIBRARIES}
-            ${TIMEMORY_${UC_LIB_TYPE}_USER_BUNDLE_LIBRARIES}
-            timemory-external-${LIB_TYPE})
-    endif()
-
     build_library(
         PIC
         NO_CACHE_LIST
         TYPE                ${UC_LIB_TYPE}
-        TARGET_NAME         timemory-compiler-instrument-${LIB_TYPE}
+        TARGET_NAME         ${LIB_TARGET}
         OUTPUT_NAME         timemory-compiler-instrument
         LANGUAGE            CXX
         LINKER_LANGUAGE     ${_LINKER_LANGUAGE}
@@ -31,40 +28,56 @@ foreach(LIB_TYPE shared static)
         SOURCES             ${CMAKE_CURRENT_LIST_DIR}/compiler-instrument.cpp)
 
     # don't allow in-source instrumentation
-    target_compile_definitions(timemory-compiler-instrument-${LIB_TYPE} INTERFACE
+    target_compile_definitions(${LIB_TARGET} INTERFACE
         DISABLE_TIMEMORY TIMEMORY_COMPILER_INSTRUMENTATION)
 
-    target_link_libraries(timemory-compiler-instrument-${LIB_TYPE} PUBLIC ${dl_LIBRARY})
+    target_link_libraries(${LIB_TARGET} PUBLIC ${dl_LIBRARY})
 
-    target_link_libraries(timemory-compiler-instrument-${LIB_TYPE} PRIVATE
-        ${_LIBS}
-        timemory-headers
-        timemory-compile-options
-        timemory-hidden-visibility)
+    target_link_libraries(${LIB_TARGET} PRIVATE
+        # ${_LIBS}
+        timemory::timemory-headers
+        timemory::timemory-compile-options
+        timemory::timemory-hidden-visibility)
 
-    target_compile_options(timemory-compiler-instrument-${LIB_TYPE} INTERFACE
-        $<$<COMPILE_LANGUAGE:C>:-g>
-        $<$<COMPILE_LANGUAGE:CXX>:-g>      
-        $<$<COMPILE_LANGUAGE:C>:-fno-omit-frame-pointer>
-        $<$<COMPILE_LANGUAGE:CXX>:-fno-omit-frame-pointer>      
-        $<$<COMPILE_LANGUAGE:C>:-fno-optimize-sibling-calls>
-        $<$<COMPILE_LANGUAGE:CXX>:-fno-optimize-sibling-calls>      
-        $<$<COMPILE_LANGUAGE:C>:-finstrument-functions>
-        $<$<COMPILE_LANGUAGE:CXX>:-finstrument-functions>
-    )
-      
-    target_compile_options(timemory-compiler-instrument-${LIB_TYPE} PRIVATE
-        $<$<COMPILE_LANGUAGE:C>:-fvisibility=hidden>
-        $<$<COMPILE_LANGUAGE:CXX>:-fvisibility=hidden>)
+    if(WIN32)
+        target_compile_options(${LIB_TARGET} INTERFACE
+            $<$<COMPILE_LANGUAGE:C>:/Z7>
+            $<$<COMPILE_LANGUAGE:CXX>:/Z7>
+            $<$<COMPILE_LANGUAGE:C>:/DEBUG>
+            $<$<COMPILE_LANGUAGE:CXX>:/DEBUG>
+            $<$<COMPILE_LANGUAGE:C>:/GH>
+            $<$<COMPILE_LANGUAGE:CXX>:/GH>
+            $<$<COMPILE_LANGUAGE:C>:/Gh>
+            $<$<COMPILE_LANGUAGE:CXX>:/Gh>)
 
-    install(TARGETS timemory-compiler-instrument-${LIB_TYPE}
+        set_target_properties(${LIB_TARGET} PROPERTIES
+            INTERFACE_LINK_OPTIONS "/DEBUG")
+    else()
+        target_compile_options(${LIB_TARGET} INTERFACE
+            $<$<COMPILE_LANGUAGE:C>:-g>
+            $<$<COMPILE_LANGUAGE:CXX>:-g>
+            $<$<COMPILE_LANGUAGE:C>:-fno-omit-frame-pointer>
+            $<$<COMPILE_LANGUAGE:CXX>:-fno-omit-frame-pointer>
+            $<$<COMPILE_LANGUAGE:C>:-fno-optimize-sibling-calls>
+            $<$<COMPILE_LANGUAGE:CXX>:-fno-optimize-sibling-calls>
+            $<$<COMPILE_LANGUAGE:C>:-finstrument-functions>
+            $<$<COMPILE_LANGUAGE:CXX>:-finstrument-functions>)
+
+        target_compile_options(${LIB_TARGET} PRIVATE
+            $<$<COMPILE_LANGUAGE:C>:-fvisibility=hidden>
+            $<$<COMPILE_LANGUAGE:CXX>:-fvisibility=hidden>
+            $<$<COMPILE_LANGUAGE:C>:-fvisibility-inlines-hidden>
+            $<$<COMPILE_LANGUAGE:CXX>:-fvisibility-inlines-hidden>)
+    endif()
+
+    install(TARGETS ${LIB_TARGET}
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/compiler)
 
     # build tree
     execute_process(
         COMMAND ${CMAKE_COMMAND} -E create_symlink
-            compiler/libtimemory-compiler-instrument.${CMAKE_SHARED_LIBRARY_SUFFIX}
-            libtimemory-compiler-instrument.${CMAKE_SHARED_LIBRARY_SUFFIX}
+            compiler/libtimemory-compiler-instrument${CMAKE_SHARED_LIBRARY_SUFFIX}
+            libtimemory-compiler-instrument${CMAKE_SHARED_LIBRARY_SUFFIX}
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 
     # install tree
@@ -77,3 +90,5 @@ EXECUTE_PROCESS(
     ")
 
 endforeach()
+
+cmake_policy(POP)
