Fixes to installation of compiler-instrumentation/jump.stubs

--- a/source/tools/timemory-compiler-instrument/CMakeLists.txt
+++ b/source/tools/timemory-compiler-instrument/CMakeLists.txt
@@ -76,21 +76,22 @@ foreach(LIB_TYPE shared static)
     endif()
 
     install(TARGETS ${LIB_TARGET}
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/compiler)
+      DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/compiler
+      EXPORT timemory-library-depends)
 
     # build tree
     execute_process(
         COMMAND ${CMAKE_COMMAND} -E create_symlink
-            compiler/libtimemory-compiler-instrument${CMAKE_SHARED_LIBRARY_SUFFIX}
-            libtimemory-compiler-instrument${CMAKE_SHARED_LIBRARY_SUFFIX}
+            compiler/libtimemory-compiler-instrument${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
+            libtimemory-compiler-instrument${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 
     # install tree
     install(CODE "
 EXECUTE_PROCESS(
     COMMAND ${CMAKE_COMMAND} -E create_symlink
-        timemory/compiler/libtimemory-compiler-instrument.${CMAKE_SHARED_LIBRARY_SUFFIX}
-        libtimemory-compiler-instrument.${CMAKE_SHARED_LIBRARY_SUFFIX}
+        timemory/compiler/libtimemory-compiler-instrument${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
+        libtimemory-compiler-instrument${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
     WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
     ")
 
