--- a/source/tools/timemory-jump/CMakeLists.txt
+++ b/source/tools/timemory-jump/CMakeLists.txt
@@ -31,21 +31,22 @@ foreach(LIB_TYPE shared static)
     endif()
 
     install(TARGETS timemory-jump-${LIB_TYPE}
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/jump)
+      DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/jump
+      EXPORT timemory-library-depends)
 
     # build tree
     execute_process(
         COMMAND ${CMAKE_COMMAND} -E create_symlink
-            jump/libtimemory.${CMAKE_SHARED_LIBRARY_SUFFIX}
-            libtimemory-jump.${CMAKE_SHARED_LIBRARY_SUFFIX}
+            jump/libtimemory${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
+            libtimemory-jump${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 
     # install tree
     install(CODE "
 EXECUTE_PROCESS(
     COMMAND ${CMAKE_COMMAND} -E create_symlink
-        timemory/jump/libtimemory.${CMAKE_SHARED_LIBRARY_SUFFIX}
-        libtimemory-jump.${CMAKE_SHARED_LIBRARY_SUFFIX}
+        timemory/jump/libtimemory${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
+        libtimemory-jump${CMAKE_${UC_LIB_TYPE}_LIBRARY_SUFFIX}
     WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
     ")
 
