--- a/source/timemory/components/data_tracker/CMakeLists.txt
+++ b/source/timemory/components/data_tracker/CMakeLists.txt
@@ -1,18 +1,16 @@
 
-if(TIMEMORY_USE_DATA_TRACKER)
-    set(NAME data_tracker)
-    set(DEPS timemory-data_tracker)
+set(NAME data_tracker)
+set(DEPS)
 
-    file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
-    file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
+file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-    build_intermediate_library(
-        NAME                ${NAME}
-        TARGET              ${NAME}-component
-        CATEGORY            COMPONENT
-        FOLDER              components
-        HEADERS             ${header_files}
-        SOURCES             ${source_files}
-        DEPENDS             ${DEPS}
-        PROPERTY_DEPENDS    GLOBAL)
-endif()
+build_intermediate_library(
+    NAME                ${NAME}
+    TARGET              ${NAME}-component
+    CATEGORY            COMPONENT
+    FOLDER              components
+    HEADERS             ${header_files}
+    SOURCES             ${source_files}
+    DEPENDS             ${DEPS}
+    PROPERTY_DEPENDS    GLOBAL)
