--- a/.travis.yml
+++ b/.travis.yml
@@ -219,7 +219,7 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-6.0) && CXX=$(which clang++-6.0) && TRAVIS_PYTHON_VERSION=3.8 && PROFILE=1 && BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --ompt --kokkos --stats --tools --cxx-standard=14' && CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'"
+        - MATRIX_EVAL="CC=$(which clang-6.0) && CXX=$(which clang++-6.0) && PROFILE=1 && BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --ompt --kokkos --stats --tools --cxx-standard=14' && CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'"
     # Clang 7
     - os: linux
       dist: bionic
@@ -257,7 +257,7 @@ install:
   - env
   - conda create -c defaults -c conda-forge -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow pip cython
   - source activate pyctest
-  - if [ -n "$(which mpicc)" ]; then python${TRAVIS_PYTHON_VERSION} -m pip install mpi4py; fi
+  - if [ -n "$(which mpicc)" ]; then python -m pip install mpi4py; fi
 
 script:
   - eval "${MATRIX_EVAL}"
@@ -265,7 +265,7 @@ script:
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
   - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; fi
   - if [ -n "${PROFILE}" ]; then ARGS="${ARGS} --profile=cpu"; fi
-  - travis_wait 85 python${TRAVIS_PYTHON_VERSION} ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+  - travis_wait 85 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
   - cd build-timemory/Linux
   - make install -j
   - if [ -f "tests/test-python-install-import.cmake" ]; then
